--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
-<header>Hello World</header>
-<style>
-
-</style>
+    <head>
+        <title>Caleb's Page</title>
+        <link rel="stylesheet" href="./public/css/style.css"/>
+        <script src="./public/js/scripts.js"></script>
+    </head>
+<body>
+    <h1>Hello world</h1>
+</body>
 
 </html>
